<resources>
    <string name="app_name">Whisper</string>
    <string name="title_activity_app_main">AppMain</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_message">Message</string>
    <string name="title_option">Option</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_friends">Friend</string>
    <string name="title_group">Group</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="app_author">Phan Trọng Đạt</string>
    <string name="title_activity_login">Login</string>
    <string name="login">LOGIN</string>
    <string name="Username">Phone number</string>
    <string name="what_mind">What\'s on your mind?</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="complete">COMPLETE</string>
    <string name="register">SIGN UP</string>
    <string name="full_name">Full name</string>
    <string name="address">Address</string>
    <string name="birth_day">Birth day</string>
    <string name="email">Email</string>
    <string name="intro">Introduction</string>
    <string name="agree_term">I agree term of Whisper.</string>
    <string name="copyright">v1.0 Copyright by Alone P</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="AND">and</string>

    <string name="space_scrolling_view_behavior">SpaceNavigationViewBehavior</string>


    <!-- LetterTileProvider -->
    <!-- All of the possible tile background colors -->
    <array name="letter_tile_colors">
        <item>#f16364</item>
        <item>#f58559</item>
        <item>#f9a43e</item>
        <item>#e4c62e</item>
        <item>#67bf74</item>
        <item>#59a2be</item>
        <item>#2093cd</item>
        <item>#ad62a7</item>
    </array>

    <!-- The default letter tile text size -->
    <dimen name="tile_letter_font_size">17sp</dimen>
    <!-- The deafult tile size -->
    <dimen name="letter_tile_size">32dp</dimen>
    <!-- /LetterTileProvider -->
</resources>
