<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background5" />

    <RelativeLayout
        android:id="@+id/layoutRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="info.trongdat.whisperapp.views.user.Login">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/whisperlogo2" />

        <android.support.v7.widget.CardView
            android:id="@+id/cavLogin"
            android:layout_width="317dp"
            android:layout_height="350dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:cardBackgroundColor="#bfffffff"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="10dp">

                    <View
                        android:layout_width="8dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:background="#2fa881" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50dp"
                        android:text="@string/login"
                        android:textColor="#FFCC00"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="#9a9a9a">

                        <EditText
                            android:id="@+id/edtPhoneNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/selector_bg_edit"
                            android:drawableLeft="@drawable/ic_account_box_black_24dp"
                            android:hint="@string/Username"
                            android:inputType="numberDecimal"
                            android:paddingBottom="2dp"
                            android:textColor="#2fa881"
                            android:textCursorDrawable="@drawable/bg_input_cursor"
                            android:textSize="17sp" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-10dp"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="50dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:drawableRight="@drawable/ic_lock_open_black_24dp" />

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="#9a9a9a"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:id="@+id/edtPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/selector_bg_edit"
                                android:drawableLeft="@drawable/ic_lock_open_black_24dp"
                                android:hint="@string/Password"
                                android:inputType="textPassword"
                                android:paddingBottom="2dp"
                                android:textColor="#2fa881"
                                android:textCursorDrawable="@drawable/bg_input_cursor"
                                android:textSize="17sp" />
                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingEnd="30dp"
                    android:paddingStart="46dp">

                    <CheckBox
                        android:id="@+id/cbxRemember"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Remember me"
                        android:textColor="#9a9a9a"
                        android:textSize="15dp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <!--<Button-->
                    <!--android:id="@+id/btnGo"-->
                    <!--android:layout_width="150dp"-->
                    <!--android:layout_height="50dp"-->
                    <!--android:background="@drawable/bt_shape"-->
                    <!--android:stateListAnimator="@drawable/state_list_animator_z"-->
                    <!--android:text="@string/go"-->
                    <!--android:textColor="#2fa881"></Button>-->
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_shape"
                        android:gravity="center">

                        <com.dd.processbutton.iml.ActionProcessButton
                            android:id="@+id/btnGo"
                            android:layout_width="150dp"
                            android:layout_height="50dp"
                            android:background="@drawable/bt_shape"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:text="@string/go"
                            android:textAllCaps="false"
                            android:textColor="#2fa881"
                            custom:pb_colorComplete="#0070f28c"
                            custom:pb_colorNormal="#0070f28c"
                            custom:pb_colorPressed="#00cfcaca"
                            custom:pb_colorProgress="@color/purple_progress"
                            custom:pb_textComplete="Wait..."
                            custom:pb_textProgress="Loading" />
                    </LinearLayout>
                </RelativeLayout>

                <TextView
                    android:id="@+id/txtForget"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="#9a9a9a"
                    android:textSize="15dp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/cavLogin"
            android:layout_alignTop="@id/cavLogin"
            android:layout_marginEnd="-20dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/plus"
            android:transitionName="loginFab"
            app:fabSize="normal" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="Developed by Phan Trọng Đạt" />

    </RelativeLayout>
</FrameLayout>